Markup for hero-banner and client's list

--- a/markup/index.html
+++ b/markup/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:400,600,600i,700" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:400,600,600i,700,800" rel="stylesheet"> 
 	<link media="all" rel="stylesheet" href="css/bootstrap.css">
 	<link media="all" rel="stylesheet" href="css/main.css">
 	<script src="js/bootstrap.min.js" defer></script>
@@ -43,23 +43,25 @@
 		<!-- Hero-banner -->
 		<section class="hero-banner">
 			<div class="bg-stretch">
-				<img src="https://placehold.it/1000x200.jpg" alt="">
+				<img src="https://placehold.it/2600x960.jpg" alt="">
 			</div>
 			<div class="container">
-				<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-				<p>Lorem ipsum dolor sit.</p>
-				<a href="#" class="btn btn-primary">Lorem ipsum.</a>
+				<div class="top-info">
+					<h1>Innovative and Intelligent Solution</h1>
+					<p>Lorem ipsum dolor sit.</p>
+					<a href="#" class="btn btn-primary">Get More Info</a>
+				</div>
 			</div>
 		</section>
 		<!-- ./Hero-banner -->
-		<div class="logo-panel">
+		<div class="logo-panel text-center">
 			<div class="container">
-				<strong>Clients we worked with:</strong>
+				<strong class="title">Clients we worked with:</strong>
 				<ul class="logo-wrap list-unstyled">
+					<li><a href="#"><img src="https://placehold.it/50x50.jpg" alt=""></a></li>
 					<li><a href="#"><img src="https://placehold.it/81x30.jpg" alt=""></a></li>
-					<li><a href="#"><img src="https://placehold.it/81x30.jpg" alt=""></a></li>
-					<li><a href="#"><img src="https://placehold.it/81x30.jpg" alt=""></a></li>
-					<li><a href="#"><img src="https://placehold.it/81x30.jpg" alt=""></a></li>
+					<li><a href="#"><img src="https://placehold.it/46x30.jpg" alt=""></a></li>
+					<li><a href="#"><img src="https://placehold.it/100x30.jpg" alt=""></a></li>
 					<li><a href="#"><img src="https://placehold.it/81x30.jpg" alt=""></a></li>
 				</ul>
 			</div>
@@ -80,7 +82,7 @@
 				<ul class="intro-list list-unstyled">
 					<li class="intro">
 						<div class="intro-icon">
-							<img src="https://placehold.it/64x64.jpg" alt="">
+							<i class="glyphicon glyphicon-calendar"></i>
 						</div>
 						<div class="intro-text">
 							<h3>Lorem ipsum dolor.</h3>
@@ -89,7 +91,7 @@
 					</li>
 					<li class="intro">
 						<div class="intro-icon">
-							<img src="https://placehold.it/64x64.jpg" alt="">
+							<i class="glyphicon glyphicon-globe"></i>
 						</div>
 						<div class="intro-text">
 							<h3>Lorem ipsum dolor.</h3>
@@ -98,7 +100,7 @@
 					</li>
 					<li class="intro">
 						<div class="intro-icon">
-							<img src="https://placehold.it/64x64.jpg" alt="">
+							<i class="glyphicon glyphicon-education"></i>
 						</div>
 						<div class="intro-text">
 							<h3>Lorem ipsum dolor.</h3>
@@ -107,7 +109,7 @@
 					</li>
 					<li class="intro">
 						<div class="intro-icon">
-							<img src="https://placehold.it/64x64.jpg" alt="">
+							<i class="glyphicon glyphicon-console"></i>
 						</div>
 						<div class="intro-text">
 							<h3>Lorem ipsum dolor.</h3>
@@ -116,7 +118,7 @@
 					</li>
 					<li class="intro">
 						<div class="intro-icon">
-							<img src="https://placehold.it/64x64.jpg" alt="">
+							<i class="glyphicon glyphicon-tower"></i>
 						</div>
 						<div class="intro-text">
 							<h3>Lorem ipsum dolor.</h3>
@@ -125,7 +127,7 @@
 					</li>
 					<li class="intro">
 						<div class="intro-icon">
-							<img src="https://placehold.it/64x64.jpg" alt="">
+							<i class="glyphicon glyphicon-phone"></i>
 						</div>
 						<div class="intro-text">
 							<h3>Lorem ipsum dolor.</h3>
@@ -134,7 +136,7 @@
 					</li>
 				</ul>
 				<!-- More link -->
-				<a href="#" class="more">Click Here to know more about us and why choose Designco Nepal</a>
+				<a href="#" class="btn more">Click Here to know more about us and why choose Designco Nepal</a>
 			</div>
 		</section>
 		<!--./ Intro block -->
