Completed How we do it and Experience section: with responsiveness

--- a/markup/index.html
+++ b/markup/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:400,600,600i,700,800" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:300,400,600,600i,700,800" rel="stylesheet"> 
 	<link media="all" rel="stylesheet" href="css/bootstrap.css">
 	<link media="all" rel="stylesheet" href="css/main.css">
 	<script src="js/bootstrap.min.js" defer></script>
@@ -136,7 +136,7 @@
 					</li>
 				</ul>
 				<!-- More link -->
-				<a href="#" class="btn more">Click Here to know more about us and why choose Designco Nepal</a>
+				<a href="#" class="more">Click Here to know more why choose Designco Nepal</a>
 			</div>
 		</section>
 		<!--./ Intro block -->
@@ -145,13 +145,15 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>How we do things</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum debitis deleniti laborum eum, beatae, ea ipsum nam quis eligendi cumque tempora saepe quia! Deleniti quo aperiam adipisci maxime, impedit vel.</p>
-						<a href="#" class="btn btn-primary">Discover more</a>
+						<div class="section-heading">
+							<h2>How we do things</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum debitis deleniti laborum eum, beatae, ea ipsum nam quis eligendi cumque tempora saepe quia! Deleniti quo aperiam adipisci maxime, impedit vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nihil corporis rerum dolorum magnam ratione, accusamus molestiae </p>
+							<a href="#" class="btn btn-primary more">Discover more</a>
+						</div>
 					</div>
 					<div class="col-sm-6">
 						<div class="img-holder">
-							<img src="https://placehold.it/200x200.jpg" alt="">
+							<img src="https://placehold.it/400x400.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -164,7 +166,7 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8">
 						<div class="section-heading text-center">
-							<h2>A wealth of experience?</h2>
+							<h2>A wealth of experience</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi mollitia quidem earum error deleniti quo quam libero temporibus! Asperiores, illum!</p>
 						</div>
 					</div>
@@ -193,15 +195,6 @@
 							<i class="glyphicon glyphicon-signal"></i>
 							<div class="text-wrap">
 								<h3>6+</h3>
-								<span class="text">Lorem ipsum dolor.</span>
-							</div>
-						</div>
-					</li>
-					<li class="data">
-						<div class="data-holder">
-							<i class="glyphicon glyphicon-signal"></i>
-							<div class="text-wrap">
-								<h3>18+</h3>
 								<span class="text">Lorem ipsum dolor.</span>
 							</div>
 						</div>
