Testimonial block added

--- a/markup/index.html
+++ b/markup/index.html
@@ -204,41 +204,61 @@
 		</section>
 		<!-- ./Data block -->
 		<!-- Testomonial block -->
-		<div class="testomonial-block">
+		<div class="testimonial-block">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8">
-						<div id="testomonialSlider" class="carousel slide" data-ride="carousel">
+						<div class="section-heading text-center">
+							<h2>What our costumer say about us</h2>
+							<p>Few words from out clients</p>
+						</div>
+						<div id="testimonialSlider" class="carousel slide" data-ride="carousel">
 							<div class="carousel-inner">
 								<div class="item active">
-									<div class="testomonial-holder">
+									<div class="testimonial-holder">
 										<div class="img-holder">
-											<img src="https://placehold.it/65x65.jpg" alt="">
+											<img src="https://placehold.it/95x95.jpg" alt="">
 										</div>
 										<blockquote class="blockquote">
-											<q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, aliquid. Voluptatibus aspernatur reiciendis sit cum deleniti, repellendus illum quisquam culpa, sunt. Dolore ad, architecto asperiores.</q>
-											<cite>Connor Mcgregor <br /> CEO, Mcgregor Entertainment</cite>
+											<q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </q>
+											
 										</blockquote>
+										<div class="footline">
+											<div class="footline-holder">
+												<p>
+													<cite>Connor Mcgregor</cite>
+													CEO, Mcgregor Entertainment
+												</p>
+											</div>
+										</div>
 									</div>
 								</div>
 								<div class="item">
-									<div class="testomonial-holder">
+									<div class="testimonial-holder">
 										<div class="img-holder">
-											<img src="https://placehold.it/65x65.jpg" alt="">
+											<img src="https://placehold.it/95x95.jpg" alt="">
 										</div>
 										<blockquote class="blockquote">
-											<q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, aliquid. Voluptatibus aspernatur reiciendis sit cum deleniti, repellendus illum quisquam culpa, sunt. Dolore ad, architecto asperiores.</q>
-											<cite>Connor Mcgregor <br /> CEO, Mcgregor Entertainment</cite>
+											<q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </q>
+											
 										</blockquote>
+										<div class="footline">
+											<div class="footline-holder">
+												<p>
+													<cite>Connor Mcgregor</cite>
+													CEO, Mcgregor Entertainment
+												</p>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
-							<a class="left carousel-control" href="#testomonialSlider" role="button" data-slide="prev">
-								<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+							<a class="left carousel-control" href="#testimonialSlider" role="button" data-slide="prev">
+								<span class="icon icon-angle-left" aria-hidden="true"></span>
 								<span class="sr-only">Previous</span>
 							</a>
-							<a class="right carousel-control" href="#testomonialSlider" role="button" data-slide="next">
-								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+							<a class="right carousel-control" href="#testimonialSlider" role="button" data-slide="next">
+								<span class="icon icon-angle-right" aria-hidden="true"></span>
 								<span class="sr-only">Next</span>
 							</a>
 						</div>
