Completed index.html file

--- a/markup/index.html
+++ b/markup/index.html
@@ -275,7 +275,9 @@
 						<div class="section-heading text-center">
 							<h2>How can we help you?</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam dolorum itaque ipsa sit veniam beatae autem optio placeat quam. Ullam dignissimos unde quae ab eligendi facere excepturi nam, qui deserunt.</p>
-							<a href="#" class="btn btn-danger">Click here to contact us</a>
+						</div>
+						<div class="text-center">
+							<a href="#" class="btn more">Click here to contact us</a>
 						</div>
 					</div>
 				</div>
@@ -285,56 +287,46 @@
 	</main>
 	<!-- Footer of the page -->
 	<footer id="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4">
-					<a href="#" class="logo-holder">
-						<img src="https://placehold.it/200x200.jpg" alt="">
-					</a>
-				</div>
-				<div class="col-sm-3">
-					<h5>Designco</h5>
-					<ul class="footer-nav list-unstyled">
-						<li><a href="#">about</a></li>
-						<li><a href="#">why us</a></li>
-						<li><a href="#">services</a></li>
-						<li><a href="#">contact us</a></li>
-					</ul>
-				</div>
-				<div class="col-sm-5">
-					<h5>Subscribe to our newsletter for more updates</h5>
-					<form action="" class="subscribe-form">
-						<div class="input-group">
-							<span class="input-group-addon">
-								<i class="glyphicon glyphicon-envelope"></i>
-							</span>
-							<input type="email" placeholder="Enter your email" class="form-control">
-							<span class="input-group-btn">
-								<input type="submit" class="btn btn-warning" value="Subscribe">
-							</span>
+		<div class="footer-holder">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="logo-holder text-center">
+							<a href="#">
+								<img src="https://placehold.it/100x100.jpg" alt="">
+							</a>
 						</div>
-					</form>
+					</div>
+					<div class="col-sm-3">
+						<ul class="footer-nav list-unstyled">
+							<li><a href="#">about</a></li>
+							<li><a href="#">why us</a></li>
+							<li><a href="#">services</a></li>
+							<li><a href="#">contact us</a></li>
+							<li class="tel">01.4780286</li>
+						</ul>
+					</div>
+					<div class="col-sm-5 text-right">
+						<nav class="social-network">
+							<ul class="list-unstyled">
+								<li class="twitter"><a href="#">twitter</a></li>
+								<li class="facebook"><a href="#">facebook</a></li>
+								<li class="linkedin"><a href="#">linkedin</a></li>
+							</ul>
+						</nav>
+						<adress class="contacts">
+							<a href="#"><i class="icon icon-envelope-o"></i><span class="text">example@example.com</span></a>
+							<a href="#"><i class="icon icon-phone"></i><span class="text">04-9841997</span></a>
+						</adress>
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-sm-4">
-					<p class="copyright">
-						Copyright &copy; 2017 Designco Nepal.
-					</p>
-				</div>
-				<div class="col-sm-4">
-					<ul class="tools list-unstyled">
-						<li><a href="#"><i class="glyphicon glyphicon-envelope"></i><span class="text">example@example.com</span></a></li>
-						<li><a href="#"><i class="glyphicon glyphicon-earphone"></i><span class="text">04-9841997</span></a></li>
-					</ul>
-				</div>
-				<div class="col-sm-4">
-					<ul class="social-links list-unstyled">
-						<li><a href="#"><i class="glyphicon glyphicon-user"></i></a></li>
-						<li><a href="#"><i class="glyphicon glyphicon-pencil"></i></a></li>
-						<li><a href="#"><i class="glyphicon glyphicon-off"></i></a></li>
-					</ul>
-				</div>
+		</div>
+		<div class="add">
+			<div class="container">
+				<span class="copyright">
+					Copyright &copy; 2017 All Rights Reserved.<a href="#">Designco Nepal</a>.
+				</span>
 			</div>
 		</div>
 	</footer>
