--- a/markup/about.html
+++ b/markup/about.html
@@ -105,14 +105,28 @@
 						<div id="valuesSlider" class="carousel slide" data-ride="carousel">
 							<div class="carousel-inner">
 								<div class="item active">
-									<strong>03</strong>
-									<h3>Values here</h3>
+									<div class="value-list">
+										<span class="value-count">01</span>
+										<div class="value-content">
+											<h3>Values here</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, officia!</p>
+										</div>
+									</div>
 								</div>
 								<div class="item">
-									<strong>04</strong>
-									<h3>Values here</h3>
+									<div class="value-list">
+										<span class="value-count">02</span>
+										<div class="value-content">
+											<h3>Values here</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, officia!</p>
+										</div>
+									</div>
 								</div>
 							</div>
+							<ol class="carousel-indicators">
+								<li data-target="#valuesSlider" data-slide-to="0" class="active">1</li>
+								<li data-target="#valuesSlider" data-slide-to="1">2</li>
+							</ol>
 							<a class="left carousel-control" href="#valuesSlider" role="button" data-slide="prev">
 								<span class="icon icon-angle-left" aria-hidden="true"></span>
 								<span class="sr-only">Previous</span>
@@ -126,17 +140,20 @@
 				</div>
 			</section>
 			<!-- ./Values Block -->
+			<!-- Recent clients -->
 			<section class="clients-list">
-				<h2>Recent Clients</h2>
-				<ul class="list-unstyled">
-					<li>
-						<img src="https://placehold.it/100x100.jpg" alt="">
-					</li>
+				<div class="section-heading text-center">
+					<h2>Recent Clients</h2>
+				</div>
+				<ul class="list-unstyled clients-logo">
+					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
+					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
 					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
 					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
 					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
 				</ul>
 			</section>
+			<!-- ./Recent clients -->
 			<div class="start-project">
 				<p>Let's make something great together</p>
 				<a href="#" class="btn btn-primary">start a project</a>
