Completed about.html

--- a/markup/about.html
+++ b/markup/about.html
@@ -44,7 +44,7 @@
 			<div class="container">
 				<div class="head-content row">
 					<div class="col-sm-6">
-						<span class="slogan">Innovative and Intelligent Solution</span>
+						<span class="slogan hidden-xs">Innovative and Intelligent Solution</span>
 					</div>
 					<div class="col-sm-6">
 						<h1 class="page-title"><span class="page-title-1">Our</span> <span class="page-title-2">story</span></h1>
@@ -127,11 +127,11 @@
 								<li data-target="#valuesSlider" data-slide-to="0" class="active">1</li>
 								<li data-target="#valuesSlider" data-slide-to="1">2</li>
 							</ol>
-							<a class="left carousel-control" href="#valuesSlider" role="button" data-slide="prev">
+							<a class="left carousel-control hidden-xs" href="#valuesSlider" role="button" data-slide="prev">
 								<span class="icon icon-angle-left" aria-hidden="true"></span>
 								<span class="sr-only">Previous</span>
 							</a>
-							<a class="right carousel-control" href="#valuesSlider" role="button" data-slide="next">
+							<a class="right carousel-control hidden-xs" href="#valuesSlider" role="button" data-slide="next">
 								<span class="icon icon-angle-right" aria-hidden="true"></span>
 								<span class="sr-only">Next</span>
 							</a>
@@ -146,19 +146,21 @@
 					<h2>Recent Clients</h2>
 				</div>
 				<ul class="list-unstyled clients-logo">
-					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
-					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
-					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
-					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
-					<li><img src="https://placehold.it/100x100.jpg" alt=""></li>
+					<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+					<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+					<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+					<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+					<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
 				</ul>
 			</section>
 			<!-- ./Recent clients -->
-			<div class="start-project">
-				<p>Let's make something great together</p>
-				<a href="#" class="btn btn-primary">start a project</a>
-			</div>
 		</div>
+		<section class="start-project text-center">
+			<div class="container">
+				<h3>Let's build something great together</h3>
+				<a href="#" class="btn">Start a Project</a>
+			</div>
+		</section>
 	</main>
 	<!-- Footer of the page -->
 	<footer id="footer">
