--- a/markup/contact us.html
+++ b/markup/contact us.html
@@ -38,6 +38,7 @@
 		</nav>
 	</header>
 	<main id="main" role="main">
+		<!-- Hero section -->
 		<section class="contact">
 			<div class="container">
 				<div class="row">
@@ -50,17 +51,20 @@
 				</div>
 			</div>
 		</section>
+		<!-- ./Hero section -->
 		<section class="section-content">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6">
+						<!-- Map holder -->
 						<div class="map-block">
 							<h2>Our location</h2>
 							<div class="map-holder">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.861733997641!2d85.321283!3d27.690667999999977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19b100490cd5%3A0x607eb48e15f34f15!2sDesignco+Nepal+(IT+solutions)!5e0!3m2!1sen!2snp!4v1408364337148" width="100%" height="450" frameborder="0" style="border:0"></iframe>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.861733997641!2d85.321283!3d27.690667999999977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19b100490cd5%3A0x607eb48e15f34f15!2sDesignco+Nepal+(IT+solutions)!5e0!3m2!1sen!2snp!4v1408364337148" width="100%" height="350" frameborder="0" style="border:0"></iframe>
 								<!--iframe src="https://www.google.com.np/maps/place/Designco+Nepal+(IT+solutions)/@27.690668,85.321283,17z/data=!3m1!4b1!4m2!3m1!1s0x39eb19b100490cd5:0x607eb48e15f34f15?hl=en"> </iframe-->
 							</div>
 						</div>
+						<!-- Address block -->
 						<div class="contact-holder">
 							<h2>Contact Info</h2>
 							<address>
@@ -76,6 +80,7 @@
 							</address>
 						</div>
 					</div>
+					<!-- Contact form -->
 					<div class="col-md-6">
 						<h2>contact form</h2>
 						<form action="" class="contact-form">
