Services.html changes

--- a/markup/services.html
+++ b/markup/services.html
@@ -37,6 +37,80 @@
 			</div>
 		</nav>
 	</header>
+	<main id="main" role="main">
+		<section class="service-intro text-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-offset-2 col-md-8">
+						<h1>our craft &amp; expertise</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore provident possimus, accusamus.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="service-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-4">
+						<a href="#" class="service-item">
+							<div class="service-icon">
+								<i class="icon glyphicon glyphicon-globe"></i>
+							</div>
+							<div class="service-item-text">
+								<h2>Web Design &amp; Development</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, reprehenderit.</p>
+							</div>
+							<div class="service-item-points">
+								<ul class="list-unstyled">
+									<li>Responsive Web design</li>
+									<li>HTML5</li>
+									<li>CSS3</li>
+									<li>jQuery</li>
+								</ul>
+							</div>
+						</a>
+					</div>
+					<div class="col-sm-4">
+						<a href="#" class="service-item">
+							<div class="service-icon">
+								<i class="icon glyphicon glyphicon-tags"></i>
+							</div>
+							<div class="service-item-text">
+								<h2>Software Development</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, reprehenderit.</p>
+							</div>
+							<div class="service-item-points">
+								<ul class="list-unstyled">
+									<li>Java</li>
+									<li>.NET</li>
+									<li>Php</li>
+								</ul>
+							</div>
+						</a>
+					</div>
+					<div class="col-sm-4">
+						<a href="#" class="service-item">
+							<div class="service-icon">
+								<i class="icon glyphicon glyphicon-briefcase"></i>
+							</div>
+							<div class="service-item-text">
+								<h2>Content Management System</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, reprehenderit.</p>
+							</div>
+							<div class="service-item-points">
+								<ul class="list-unstyled">
+									<li>Wordpress</li>
+									<li>Drupal</li>
+									<li>Custom CMS</li>
+									<li>Zoomla</li>
+								</ul>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
 	<!-- Footer of the page -->
 	<footer id="footer">
 		<div class="footer-holder">
