Service page completed and single page started

--- a/markup/service-single.html
+++ b/markup/service-single.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Contact us | Designco Nepal</title>
+	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:300,400,600,600i,700,800" rel="stylesheet"> 
 	<link media="all" rel="stylesheet" href="css/bootstrap.css">
 	<link media="all" rel="stylesheet" href="css/main.css">
@@ -39,87 +39,75 @@
 	</header>
 	<main id="main" role="main">
 		<!-- Hero section -->
-		<section class="contact">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-offset-2 col-md-8">
-						<div class="section-heading text-center">
-							<h1>Get in touch</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit accusamus provident repudiandae voluptatum natus placeat sequi, voluptas omnis quaerat iusto.</p>
+		<section class="service-header">
+			<div class="service-header-inner">
+				<div class="container">
+					<div class="service-header-content">
+						<h1>Web Design &amp; Development</h1>
+						<div class="service-header-excerpt">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. A suscipit provident, assumenda voluptatum cupiditate. Odit est tempora repudiandae hic pariatur modi. Maiores laudantium, iusto dolores velit aspernatur eos ipsam, ut. Eveniet totam suscipit cum facilis maxime ad, omnis quam non.
+							</p>
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla aspernatur, corporis tenetur quaerat dolor eum veritatis voluptas, suscipit praesentium vero.
+							</p>
 						</div>
 					</div>
+				</div>
+				<div class="service-header-img-bg">
+					<span data-srcset="images/img-01.jpg"></span>
 				</div>
 			</div>
 		</section>
 		<!-- ./Hero section -->
-		<section class="section-content">
+		<div class="general-info">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<!-- Map holder -->
-						<div class="map-block">
-							<h2>Our location</h2>
-							<div class="map-holder">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3532.861733997641!2d85.321283!3d27.690667999999977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19b100490cd5%3A0x607eb48e15f34f15!2sDesignco+Nepal+(IT+solutions)!5e0!3m2!1sen!2snp!4v1408364337148" width="100%" height="350" frameborder="0" style="border:0"></iframe>
-								<!--iframe src="https://www.google.com.np/maps/place/Designco+Nepal+(IT+solutions)/@27.690668,85.321283,17z/data=!3m1!4b1!4m2!3m1!1s0x39eb19b100490cd5:0x607eb48e15f34f15?hl=en"> </iframe-->
-							</div>
-						</div>
-						<!-- Address block -->
-						<div class="contact-holder">
-							<h2>Contact Info</h2>
-							<address>
-								<p>Desigco Nepal, Ganga Devi Marg-Buddhanagar, Kathmandu, Nepal</p>
-								<dl class="contact-info">
-									<dt>Phone:</dt>
-									<dd><a href="tel:014780286" class="tel">01-4780286</a></dd>
-									<dt>Email:</dt>
-									<dd><a href="mailto:info@designconepal.com">info@designconepal.com</a></dd>
-									<dt>web:</dt>
-									<dd><a href="www.designconepal.com.np">www.designconepal.com.np</a></dd>
-								</dl>
-							</address>
-						</div>
-					</div>
-					<!-- Contact form -->
-					<div class="col-md-6">
-						<h2>contact form</h2>
-						<form action="" class="contact-form">
-							<fieldset>
-								<div class="row">
-									<div class="col-sm-6 form-group">
-										<input type="text" class="form-control" placeholder="First Name">
-									</div>
-									<div class="col-sm-6 form-group">
-										<input type="text" class="form-control" placeholder="Last Name">
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm-12 form-group">
-										<input type="text" placeholder="Company Name" class="form-control">
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm-6 form-group">
-										<input type="email" class="form-control" placeholder="Your Email">
-									</div>
-									<div class="col-sm-6 form-group">
-										<input type="text" class="form-control" placeholder="Phone">
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-sm-12 form-group">
-										<textarea name="" id="" cols="75" rows="10" placeholder="Your Message" class="form-control"></textarea>
-									</div>
-								</div>
-								<div class="form-button">
-									<input type="submit" class="btn btn-danger" value="Send It">
-								</div>
-							</fieldset>
-						</form>
+					<div class="col-sm-8">
+						<ol class="list list-unstyled">
+							<li>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur tempore facere, cumque voluptate sed deserunt eaque vitae eveniet consequatur earum!
+								</p>
+							</li>
+							<li><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ut minima asperiores odio dolor consequatur laborum non cupiditate nam.</p></li>
+							<li><p>
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, adipisci et inventore voluptatem sunt. Explicabo.
+							</p></li>
+						</ol>
 					</div>
 				</div>
 			</div>
+		</div>
+		<section class="techologies-block">
+			<div class="container">
+				<div class="text-center">
+					<h2>Technologies we love</h2>
+				</div>
+			</div>
+			<div class="technologies">
+				<div class="container">
+					<ul class="list-unstyled">
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+					</ul>
+				</div>
+			</div>
 		</section>
+		<div class="container">
+			<h2>Other services</h2>
+			<div class="row other-services">
+				<div class="col-sm-4">
+					<div class="other-service">
+						<h3>Software Development</h3>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 	<!-- Footer of the page -->
 	<footer id="footer">
