--- a/markup/services.html
+++ b/markup/services.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Services</title>
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:300,400,600,600i,700,800" rel="stylesheet"> 
 	<link media="all" rel="stylesheet" href="css/bootstrap.css">
 	<link media="all" rel="stylesheet" href="css/main.css">
@@ -43,7 +43,7 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8">
 						<h1>our craft &amp; expertise</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore provident possimus, accusamus.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo reprehenderit accusantium fugiat voluptatum, vero, repudiandae! Inventore soluta consectetur autem, qui.</p>
 					</div>
 				</div>
 			</div>
@@ -51,7 +51,7 @@
 		<section class="service-content">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<a href="#" class="service-item">
 							<div class="service-icon">
 								<i class="icon glyphicon glyphicon-globe"></i>
@@ -70,7 +70,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<a href="#" class="service-item">
 							<div class="service-icon">
 								<i class="icon glyphicon glyphicon-tags"></i>
@@ -88,7 +88,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<a href="#" class="service-item">
 							<div class="service-icon">
 								<i class="icon glyphicon glyphicon-briefcase"></i>
@@ -108,6 +108,27 @@
 						</a>
 					</div>
 				</div>
+				<div class="clients-list">
+					<div class="text-center">
+						<h2>We work with best, startups to enterprise</h2>
+					</div>
+					<ul class="list-unstyled clients-logo">
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+						<li><img src="https://placehold.it/800x800.jpg" alt=""></li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="start-project text-center">
+			<div class="container">
+				<h3>Let's build something great together</h3>
+				<a href="#" class="btn">Start a Project</a>
 			</div>
 		</section>
 	</main>
