--- a/markup/about.html
+++ b/markup/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>About | Designco Nepal</title>
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:300,400,600,600i,700,800" rel="stylesheet"> 
 	<link media="all" rel="stylesheet" href="css/bootstrap.css">
 	<link media="all" rel="stylesheet" href="css/main.css">
