Services single page completed

--- a/markup/service-single.html
+++ b/markup/service-single.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Web Development | Designco Nepal</title>
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Open+Sans:300,400,600,600i,700,800" rel="stylesheet"> 
 	<link media="all" rel="stylesheet" href="css/bootstrap.css">
 	<link media="all" rel="stylesheet" href="css/main.css">
@@ -43,7 +43,7 @@
 			<div class="service-header-inner">
 				<div class="container">
 					<div class="service-header-content">
-						<h1>Web Design &amp; Development</h1>
+						<h1>Web Development</h1>
 						<div class="service-header-excerpt">
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit. A suscipit provident, assumenda voluptatum cupiditate. Odit est tempora repudiandae hic pariatur modi. Maiores laudantium, iusto dolores velit aspernatur eos ipsam, ut. Eveniet totam suscipit cum facilis maxime ad, omnis quam non.
@@ -98,16 +98,37 @@
 				</div>
 			</div>
 		</section>
-		<div class="container">
+		<div class="container other-services">
 			<h2>Other services</h2>
-			<div class="row other-services">
+			<div class="row">
 				<div class="col-sm-4">
 					<div class="other-service">
+						<i class="icon glyphicon glyphicon-globe"></i>
 						<h3>Software Development</h3>
+						<p class="small">Lorem ipsum dolor sit.</p>
+						<a href="#" class="btn btn-primary more">
+							details
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="other-service">
+						<i class="icon glyphicon glyphicon-tags"></i>
+						<h3>CMS</h3>
+						<p class="small">Lorem ipsum dolor sit.</p>
+						<a href="#" class="btn btn-primary more">
+							details
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
+		<section class="start-project text-center">
+			<div class="container">
+				<h3>Let's build something great together</h3>
+				<a href="#" class="btn">Start a Project</a>
+			</div>
+		</section>
 	</main>
 	<!-- Footer of the page -->
 	<footer id="footer">
