--- a/markup/blog.html
+++ b/markup/blog.html
@@ -172,6 +172,29 @@
 							</div>
 						</article>
 					</section>
+					<section class="sect-pagination">
+						<div class="text-center">
+							<nav aria-label="Page navigation">
+								<ul class="pagination">
+									<li class="disabled">
+										<a href="#" aria-label="Previous">
+											<span aria-hidden="true">&laquo;</span>
+										</a>
+									</li>
+									<li class="active"><span>1 <span class="sr-only">(current)</span></span></li>
+									<li><a href="#">2</a></li>
+									<li><a href="#">3</a></li>
+									<li><a href="#">4</a></li>
+									<li><a href="#">5</a></li>
+									<li>
+										<a href="#" aria-label="Next">
+											<span aria-hidden="true">&raquo;</span>
+										</a>
+									</li>
+								</ul>
+							</nav>
+						</div>
+					</section>
 				</div>
 			</div>
 		</div>
